--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:run": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "CSW",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.2",
