--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "faker": "^4.1.0",
-    "mongoose": "^5.9.10",
-    "multer": "^1.4.2"
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
